--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "axios": "^1.7.7",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
