refactor: create typescript project for pull llm

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "devDependencies": {
     "@nx/devkit": "19.7.2",
+    "@nx/esbuild": "19.7.2",
     "@nx/eslint": "19.7.2",
     "@nx/eslint-plugin": "19.7.2",
     "@nx/jest": "19.7.2",
     "@nx/js": "19.7.2",
     "@nx/next": "19.7.2",
+    "@nx/node": "19.7.2",
     "@nx/playwright": "19.7.2",
     "@nx/workspace": "19.7.2",
     "@playwright/test": "^1.36.0",
@@ -32,6 +34,7 @@
     "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.0.0",
