--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@ai.code/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build:pull-llm": "pnpm -F=pull-llm build",
+    "build": "pnpm build:pull-llm && docker compose up -d --build"
+  },
   "private": true,
   "dependencies": {
     "axios": "^1.7.7",
